--- a/src/main/resources/templates/components/no_accounts_display.html
+++ b/src/main/resources/templates/components/no_accounts_display.html
@@ -2,16 +2,16 @@
     <div class="card no-accounts-card">
         <div class="card-body">
             <h1 class="card-title">
-                <i class="fas fa-ban text-danger"></i> NO Registered Accounts
+                <i class="fas fa-ban text-danger"></i> У вас еще нет учетной записи
             </h1>
             <hr>
             <div class="card-text">
-                You currently don't have any registered accounts. <br>
-                Please click below to register / add a new account.
+                В настоящее время у вас нет зарегистрированных учетных записей. <br>
+                Пожалуйста, нажмите ниже, чтобы зарегистрировать / добавить новую учетную запись.
             </div>
             <br>
             <button id="" class="btn btn-primary btn-lg shadow" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
-                <i class="fa fa-credit-card"></i> Add new Account
+                <i class="fa fa-credit-card"></i> Добавить новую учетную запись
             </button>
 
         </div>
