--- a/src/main/resources/templates/components/transact_offcancas.html
+++ b/src/main/resources/templates/components/transact_offcancas.html
@@ -7,16 +7,16 @@
   <!-- Transact body-->
   <div class="offcanvas-body">
     <small class="card-text text-white">
-      Choose an Option below to perform a transaction
+      Выберите опцию ниже, чтобы выполнить транзакцию
     </small>
     <!-- Transaction drop list -->
     <label for="transact-type"></label>
     <select name="transact-type" class="form-control  my-3" id="transact-type">
-      <option value=""> -- Select Transaction Type -- </option>
-      <option value="payment">Payment</option>
-      <option value="transfer">Transfer</option>
-      <option value="deposit">Deposit</option>
-      <option value="withdraw">Withdraw</option>
+      <option value=""> -- Выбериет тип транзакции -- </option>
+      <option value="payment">Оплата</option>
+      <option value="transfer">Перевод</option>
+      <option value="deposit">Депозит</option>
+      <option value="withdraw">Снятие</option>
     </select>
     <!-- End of Transaction drop list -->
 
