--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -18,21 +18,15 @@
 
     <h1 class="mb-3">Easy-Way Bank</h1>
 
-    <h5 class="card-title">
-      Flexible Banking Solutions
-    </h5>
-
     <p class="card-text">
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-      Aliquam amet consectetur ea eos natus praesentium! Earum possimus rerum sed.
-      Architecto esse exercitationem incidunt nemo recusandae sunt, unde veritatis voluptatem.
-      Aliquam aperiam, dignissimos dolor excepturi,
-      ipsa itaque laudantium minus molestias mollitia obcaecati officiis quia ratione recusandae repudiandae sunt unde veritatis voluptatum.
+      Добро пожаловать в Easy-Way Bank. Это мой первый pet-проект на Spring.
+      Технологии которые были использованы SpringBoot 3.0.6, Postgres, Maven.
+      Если вы как то узнали об этом сайте напишите на почту egor.saprykin.03@mail.ru.
     </p>
 
     <div class="button-wrapper d-flex align-items-center">
-      <a href="/api/v1/register" class="btn btn-mb register" role="button">Register</a>
-      <a href="/api/v1/login" class="btn btn-mb login" role="button">Login</a>
+      <a href="/api/v1/register" class="btn btn-mb register" role="button">Регистрация</a>
+      <a href="/api/v1/login" class="btn btn-mb login" role="button">Вход</a>
     </div>
   </div>
 </div>
