--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
 
   <div class="card-body">
     <h1 class="form-header card-title mb-3">
-      <i class="fa fa-user-circle"></i> Login
+      <i class="fa fa-user-circle"></i> Вход
     </h1>
 
     <form th:if="${successVerification}">
@@ -48,14 +48,14 @@
       <!-- Email Row -->
       <div class="form-group col">
         <label for="email"></label>
-        <input type="text" name="email" id="email" class="form-control form-control-lg" placeholder="Enter Your email"/>
+        <input type="text" name="email" id="email" class="form-control form-control-lg" placeholder="Введите вашу почту"/>
       </div>
       <!-- End Email Row -->
 
       <!-- Password -->
       <div class="form-group col">
         <label for="password"></label>
-        <input type="password" name="password" id="password" class="form-control form-control-lg" placeholder="Enter password">
+        <input type="password" name="password" id="password" class="form-control form-control-lg" placeholder="Введите ваш пароль">
       </div>
       <!--  End of Password -->
 
@@ -68,7 +68,7 @@
 
       <!-- Button login-->
       <div class="form-group col">
-        <button class="btn btn-lg">Login</button>
+        <button class="btn btn-lg">Вход</button>
       </div>
       <!-- End Button login-->
     </form>
@@ -76,13 +76,13 @@
 
     <!-- Card text -->
     <p class="card-text text-white my-2">
-      Dont have an account? <span class="ms-2 text-warning"><a href="/api/v1/register" class="btn btn-sm text-warning">Sign Up</a></span>
+      Еще нет аккаунта? <span class="ms-2 text-warning"><a href="/api/v1/register" class="btn btn-sm text-warning">Регистрация</a></span>
     </p>
     <!-- End of Card text -->
 
     <!-- Back Button To Landing Page -->
     <small class="text-warning">
-      <i class="fa fa-arrow-alt-circle-left"></i> <a href="/api/v1/index" class="btn btn-sm text-warning">Back</a>
+      <i class="fa fa-arrow-alt-circle-left"></i> <a href="/api/v1/index" class="btn btn-sm text-warning">Назад</a>
     </small>
     <!-- End Of Back Button To Landing Page -->
   </div>
