--- a/src/main/resources/templates/components/add_account_display.html
+++ b/src/main/resources/templates/components/add_account_display.html
@@ -1,5 +1,6 @@
 <!-- Account container -->
-<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel" xmlns:th='http://www.thymeleaf.org'>
+<div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel"
+     xmlns:th='http://www.thymeleaf.org'>
     <div class="offcanvas-header">
         <h5 id="offcanvasRightLabel" class="text-white">Создать / Добавить учетную запись</h5>
         <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
