--- a/src/main/resources/templates/components/no_accounts_display.html
+++ b/src/main/resources/templates/components/no_accounts_display.html
@@ -1,4 +1,4 @@
-<div class="container" xmlns:th='http://www.thymeleaf.org'>
+<div class="container">
     <div class="card no-accounts-card">
         <div class="card-body">
             <h1 class="card-title">
@@ -10,7 +10,8 @@
                 Пожалуйста, нажмите ниже, чтобы зарегистрировать / добавить новую учетную запись.
             </div>
             <br>
-            <button id="" class="btn btn-primary btn-lg shadow" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+            <button id="" class="btn btn-primary btn-lg shadow" type="button" data-bs-toggle="offcanvas"
+                    data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
                 <i class="fa fa-credit-card"></i> Добавить новую учетную запись
             </button>
 
