--- a/src/main/resources/templates/components/transact_forms/deposit_form.html
+++ b/src/main/resources/templates/components/transact_forms/deposit_form.html
@@ -3,15 +3,17 @@
         <form th:method="POST" th:action="@{/api/v1/deposit}" class="deposit-form">
             <div class="form-group mb-2">
                 <label for="enter"> Enter Deposit Amount</label>
-                <input id="enter" type="text" name="deposit_amount" class="form-control" placeholder="Enter Deposit Amount">
+                <input id="enter" type="text" name="deposit_amount" class="form-control"
+                       placeholder="Enter Deposit Amount">
             </div>
 
             <div class="form-group">
                 <label for="">Select Account</label>
                 <select name="account_id" class="form-control" id="">
-                    <option value=""> -- Select Account -- </option>
+                    <option value=""> -- Select Account --</option>
                     <div th:if="${userAccounts != null}" th:each="selectAmount : ${userAccounts}">
-                        <option th:value="${selectAmount.getAccount_id()}" th:text="${selectAmount.getAccount_name()}"></option>
+                        <option th:value="${selectAmount.getAccount_id()}"
+                                th:text="${selectAmount.getAccount_name()}"></option>
                     </div>
                 </select>
             </div>
