--- a/src/main/resources/templates/components/transact_forms/payment_form.html
+++ b/src/main/resources/templates/components/transact_forms/payment_form.html
@@ -3,20 +3,23 @@
         <form th:method="POST" th:action="@{/api/v1/payment}">
             <div class="form-group mb-2">
                 <label for=""> Account Holder / Beneficiary</label>
-                <input type="text" name="beneficiary" class="form-control" placeholder="Enter Account holder / Beneficiary name">
+                <input type="text" name="beneficiary" class="form-control"
+                       placeholder="Enter Account holder / Beneficiary name">
             </div>
 
             <div class="form-group mb-2">
                 <label for=""> Beneficiary Account Number</label>
-                <input type="text" name="account_number" class="form-control" placeholder="Enter Beneficiary Account No">
+                <input type="text" name="account_number" class="form-control"
+                       placeholder="Enter Beneficiary Account No">
             </div>
 
             <div class="form-group">
                 <label for="">Select Account</label>
                 <select name="account_id" class="form-control" id="">
-                    <option value=""> -- Select Account -- </option>
+                    <option value=""> -- Select Account --</option>
                     <div th:if="${userAccounts != null}" th:each="selectAmount : ${userAccounts}">
-                        <option th:value="${selectAmount.getAccount_id()}" th:text="${selectAmount.getAccount_name()}"></option>
+                        <option th:value="${selectAmount.getAccount_id()}"
+                                th:text="${selectAmount.getAccount_name()}"></option>
                     </div>
                 </select>
             </div>
