--- a/src/main/resources/templates/components/transact_forms/withdraw_form.html
+++ b/src/main/resources/templates/components/transact_forms/withdraw_form.html
@@ -9,9 +9,10 @@
             <div class="form-group">
                 <label for="">Select Account</label>
                 <select name="account_id" class="form-control" id="">
-                    <option value=""> -- Select Account -- </option>
+                    <option value=""> -- Select Account --</option>
                     <div th:if="${userAccounts != null}" th:each="selectAmount : ${userAccounts}">
-                        <option th:value="${selectAmount.getAccount_id()}" th:text="${selectAmount.getAccount_name()}"></option>
+                        <option th:value="${selectAmount.getAccount_id()}"
+                                th:text="${selectAmount.getAccount_name()}"></option>
                     </div>
                 </select>
             </div>
